--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p>Para mais informações</p>
         <div class="links">
             <a href=""><img src="./assets/link.png" alt="Linkdin"></a>
-            <a href=""><img src="./assets/git.png" alt="Git"></a>
+            <a href=" https://github.com/DouglasKlimeschs"><img src="./assets/git.png" alt="Git"></a>
             <a href=""><img src="./assets/fone.png" alt=""></a>
         </div>
     </footer>
