Modificação na aba Projetos

--- a/index.html
+++ b/index.html
@@ -53,31 +53,23 @@
         </div>
         <div class="card-content">
             <div class="card">
-                <img src="" alt="">
-                <h5>Loja Joias</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, repellendus quod maiores cupiditate
-                    ea,
-                    explicabo soluta voluptatibus quo ex eaque ab, consequatur maxime! Temporibus aliquid perferendis
-                    itaque
-                    quo similique praesentium!</p>
-                <a>Ver Projeto</a>
+                <img  class= "imgprojects" src="./assets/logo-projeto-Devburguer.png" alt="">
+                <h5>Carrinho <br> Dev Burgue DK</h5>
+                <p> Projeto desenvolvido com HTML,CSS e JS. Simulando um carrinho com pedidos feitos de uma Hamburgueria  </p>
+                <a href="https://dev-burguerdk.netlify.app">Ver Projeto</a>
 
 
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h5>Loja Joias</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, repellendus quod maiores cupiditate
-                    ea,
-                    explicabo soluta voluptatibus quo ex eaque ab, consequatur maxime! Temporibus aliquid perferendis
-                    itaque
-                    quo similique praesentium!</p>
-                <a>Ver Projeto</a>
+                <img class= "imgprojects" src="assets/logo-projeto-jokenpo.png" alt="">
+                <h5>JokenPô</h5>
+                <p>Projeto JokenPô desenvolvido com HTML,CSS,JS. Jogo JokenPô famoso pedra,papel e tesoura. Um dos jogos mais usados tanto por diversão quanto para aquele desempate em multiplas situaçoes na vida </p>
+                <a href="https://jokenpo-dk.netlify.app">Ver Projeto</a>
 
 
             </div>
             <div class="card">
-                <img src="" alt="">
+                <img class= "imgprojects" src="" alt="">
                 <h5>Loja Joias</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, repellendus quod maiores cupiditate
                     ea,
