Realizada alteraçoes nas abas projetos com a inclusao de img e mudança de logo .Ajuste na responsividade

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <section >
         <div class="content-discrition" id="sobre">
-            <img src="./assets/DK.png" alt="Logo">
+            <img src="./assets/DK logo.png" alt="Logo">
             <div class="discrition">
                 <h3>Sobre mim </h3>
                 <p>Eu sou um Programador Front End, tenho experiência e conhecimento em aplicações com HTML, CSS e
@@ -56,7 +56,7 @@
                 <img  class= "imgprojects" src="./assets/logo-projeto-Devburguer.png" alt="">
                 <h5>Carrinho <br> Dev Burgue DK</h5>
                 <p> Projeto desenvolvido com HTML,CSS e JS. Simulando um carrinho com pedidos feitos de uma Hamburgueria  </p>
-                <a href="https://dev-burguerdk.netlify.app">Ver Projeto</a>
+                <a href="https://dev-burguerdk.netlify.app" target="_blank">Ver Projeto</a>
 
 
             </div>
@@ -64,19 +64,15 @@
                 <img class= "imgprojects" src="assets/logo-projeto-jokenpo.png" alt="">
                 <h5>JokenPô</h5>
                 <p>Projeto JokenPô desenvolvido com HTML,CSS,JS. Jogo JokenPô famoso pedra,papel e tesoura. Um dos jogos mais usados tanto por diversão quanto para aquele desempate em multiplas situaçoes na vida </p>
-                <a href="https://jokenpo-dk.netlify.app">Ver Projeto</a>
+                <a href="https://jokenpo-dk.netlify.app" target="_blank">Ver Projeto</a>
 
 
             </div>
             <div class="card">
-                <img class= "imgprojects" src="" alt="">
-                <h5>Loja Joias</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, repellendus quod maiores cupiditate
-                    ea,
-                    explicabo soluta voluptatibus quo ex eaque ab, consequatur maxime! Temporibus aliquid perferendis
-                    itaque
-                    quo similique praesentium!</p>
-                <a href="">Ver Projeto</a>
+                <img class= "imgprojects" src="./assets/logo-projeto-loja-joias.png" alt="">
+                <h5>Loja de Joias</h5>
+                <p>Projeto de landing page para loja de Joias desenvolvido com HTML E CSS . Uma landing page clean com o objetivo de resaltar as Joias </p>
+                <a href="https://lojadejoiasdk.netlify.app/" target="_blank">Ver Projeto</a>
 
 
             </div>
