inclusão de email e link no footer

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     <footer id="contato">
 
         <h5>Douglas Klimesch</h5>
-        <p>Para mais informações</p>
+        <p>Para mais informações  <br> Email: Douglasklimesch@hotmail.com </p>
         <div class="links">
-            <a href=""><img src="./assets/link.png" alt="Linkdin"></a>
+            <a href="https://www.linkedin.com/in/douglas-klimesch-502137304/"><img src="./assets/link.png" alt="Linkdin"></a>
             <a href=" https://github.com/DouglasKlimesch"><img src="./assets/git.png" alt="Git"></a>
-            <a href=""><img src="./assets/fone.png" alt=""></a>
+            
         </div>
     </footer>
 
