corrigido paragrafo aba card

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="card">
                 <img class= "imgprojects" src="./assets/logo-projeto-loja-joias.png" alt="">
                 <h5>Loja de Joias</h5>
-                <p>Projeto de landing page para loja de Joias desenvolvido com HTML E CSS . Uma landing page clean com o objetivo de resaltar as Joias </p>
+                <p>Projeto de landing page para loja de Joias desenvolvido com HTML E CSS . Uma landing page clean com o objetivo de ressaltar as Joias </p>
                 <a href="https://lojadejoiasdk.netlify.app/" target="_blank">Ver Projeto</a>
 
 
