--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100..700&display=swap" rel="stylesheet">
-    <title>Douglas Klimesch</title>
+    <link rel="shortcut icon" type="imagex/png" href="./assets/Mask-group.ico" >
+    <title>D.K Desenvolvedor web</title>
 </head>
 
 <body>
+    
     <div class="content-home" id="home">
         <div class="play-backgroud">
             <video src="./assets/space-science-hud.1920x1080.mp4" autoplay loop muted></video>
